feat(inspect): api for retrieve service hostnames
